<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33FFFFFF"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gender_dialog"
        android:paddingBottom="@dimen/_14sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/bg_title_dialog">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="@string/why_do_we_need_permission"
            android:textColor="@color/black"
            android:fontFamily="@font/mukta_semi_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/without_this_authorization_the_app_will_not_work"
                android:lineHeight="@dimen/_28sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/mukta_medium"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:textColor="#173430"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_16sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_permissions"
                android:fontFamily="@font/mukta_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_tap_physical_activity"
                android:fontFamily="@font/mukta_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_tap_allow"
                android:fontFamily="@font/mukta_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"/>
        </LinearLayout>
        <TextView
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:id="@+id/btnGrant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:fontFamily="@font/mukta_semi_bold"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>