<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_10_white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_semi_bold"
        android:text="@string/weight"
        android:textColor="@color/app_text_color"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:backgroundTint="@color/app_text_color"
            android:fontFamily="@font/mukta_medium"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_selected_corner_5_green_white"
            android:fontFamily="@font/mukta_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/kg"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />


        <TextView
            android:id="@+id/tv_lb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_selected_corner_5_green_white"
            android:fontFamily="@font/mukta_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/lb"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mukta_semi_bold"
        android:text="@string/height"
        android:textColor="@color/app_text_color"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edt_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:backgroundTint="@color/app_text_color"
            android:fontFamily="@font/mukta_medium"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_cm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_selected_corner_5_green_white"
            android:fontFamily="@font/mukta_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/cm"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />


        <TextView
            android:id="@+id/tv_inch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_selected_corner_5_green_white"
            android:fontFamily="@font/mukta_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mukta_medium"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/color_neutra_gray"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:padding="@dimen/_7sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mukta_semi_bold"
            android:gravity="center"
            android:text="@string/save_lowercase"
            android:textColor="#06A003"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</LinearLayout>