<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gender_dialog"
        android:padding="@dimen/_14sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_metric_dialog"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/metric_imperial_unit"
                android:textSize="@dimen/_20sdp"
                android:layout_weight="1"
                android:fontFamily="@font/mukta_bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="#173430"/>
            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_close_dialog" />
        </LinearLayout>
        <TextView
            android:id="@+id/txtLbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_unselected_dialog"
            android:text="@string/lbs_ft_mile"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/mukta_semi_bold"
            android:gravity="center"
            android:textColor="@color/un_selected_text_color_sex"/>
        <TextView
            android:id="@+id/txtKg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_selected_dialog"
            android:text="@string/kg_cm_km"
            android:textSize="@dimen/_22sdp"
            android:fontFamily="@font/mukta_semi_bold"
            android:gravity="center"
            android:textColor="@color/selected_text_color_sex"/>
        <TextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/mukta_semi_bold"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>