<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_info_step_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_gravity="center"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:text="@string/add_your_steps"
        android:textColor="#000000"
        android:paddingHorizontal="@dimen/_10ssp"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp" />
        <TextView
            android:id="@+id/title"
            android:fontFamily="@font/mukta_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_13ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_steps_to_track_your_health_in_the_most_intuitive_way_"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10ssp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="#3E3E3E"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/mukta_semi_bold"/>
            <TextView
                android:id="@+id/txt_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_bold"
                android:textColor="#86B81B"
                android:text="2345"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textColor="#3E3E3E"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/mukta_semi_bold"/>
            <TextView
                android:id="@+id/txt_week_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_bold"
                android:textColor="#FFA901"
                android:text="2345"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="#3E3E3E"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/mukta_semi_bold"/>
            <TextView
                android:id="@+id/txt_month_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_bold"
                android:textColor="#FF6004"
                android:text="2345"
                android:textSize="@dimen/_14ssp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/iv_add_info_2"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_notilock"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_7ssp"
            android:src="@drawable/ic_add_black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mukta_semi_bold"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="#3E3E3E"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>
</LinearLayout>



